@@ -550,3 +550,4 @@ IsStrongPseudoprime(91,3)					0
 IsStrongPseudoprime(341,2)					1
 IsStrongPseudoprime(341,3)					0
 IsPseudoprime(341,2)						1
+-[1,2] mod 3							[2,1]
